# strstrbench

./: CMakeLists.txt  README.md  benchmarker.py
src/: strstrbench.c
